--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title></title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-????????????????????.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-arksey.html">
 <meta name="">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
@@ -212,7 +212,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <!-- ✅ FAQ SECTION -->
 <section style="max-width:900px; margin:40px auto; padding:0 15px;">
 
-<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions About Pressure Washing in ?????????????????</h2>
+<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions About Pressure Washing in Arksey</h2>
 
 <div>
 <p><strong></strong><br>
@@ -361,7 +361,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/local/pressure-washing-???????????????????.html",
+"url": "https://homerepairs4u.com/local/pressure-washing-arksey.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -374,10 +374,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.5539,????????????????
-"longitude": -1.1352????????????????
+"latitude": 53.5564,
+"longitude": -1.1259
 },
-"areaServed": "???????????????????",
+"areaServed": "Arksey",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
