--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -134,9 +134,9 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Section 1 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h1></h1>
-<p></p>
-<p></p>
+<h1>Professional Pressure Washing Services in Arksey</h1>
+<p>Maintaining the exterior of your property in Arksey can be challenging. Driveways, patios, walls, and other outdoor surfaces are constantly exposed to the elements, traffic, and natural growth. Over time, dirt, algae, moss, lichen, and general stains build up, making surfaces look tired, slippery, and unsafe. Our professional pressure washing services are designed to remove this grime efficiently, restoring your property’s appearance while keeping it safe and well-maintained.</p>
+<p>We use high-quality pressure washing equipment combined with the right techniques for each surface. Before any work begins, we carefully assess the area to ensure the correct pressure and method is used—whether it’s block paving, concrete, tarmac, natural stone, or rendered walls. This approach guarantees a deep, thorough clean without causing damage. For both homes and businesses in Arksey, pressure washing is a practical way to enhance curb appeal, improve safety, and protect outdoor surfaces from long-term wear.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -147,9 +147,9 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 2 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
+<h2>Driveway Cleaning and Pressure Washing</h2>
+<p>Driveways are one of the first things visitors notice about a property and often the busiest outdoor areas. In Arksey, they frequently collect oil stains, tyre marks, moss, algae, and ingrained dirt. Left untreated, these build-ups make surfaces look neglected and can increase the risk of slips. Professional driveway pressure washing removes these contaminants, leaving your driveway looking fresh, clean, and inviting</p>
+<p>Our service works on block paving, concrete, tarmac, and natural stone. We carefully adjust pressure and techniques to match the material, ensuring effective cleaning without causing damage. Regular driveway maintenance also prevents staining, weed growth, and moisture-related issues. Many property owners choose this service to enhance kerb appeal, maintain property value, and keep entrances safe throughout the year.</p>
 <img src="/images/pressure-washing-driveway.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -160,9 +160,9 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 3 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
+<h2>Patio and Deck Cleaning</h2>
+<p>Patios and decking are made for relaxing and entertaining, but they are also highly susceptible to dirt, algae, moss, and spill stains. In shaded or damp areas, green growth can develop quickly, making surfaces slippery and unattractive. Our pressure washing service restores patios and decking to a clean, safe, and inviting condition, ready for everyday use.</p>
+<p>We clean a variety of surfaces, including concrete, natural stone, porcelain paving, wooden decking, and composite boards. Each surface receives the appropriate pressure and method to avoid damage such as splintering or etching. Regular patio and deck cleaning not only improves appearance but also extends the lifespan of the materials by reducing moisture retention and surface deterioration. Pressure washing is an ideal solution for homeowners in Arksey looking to refresh their garden spaces for entertaining, seasonal enjoyment, or everyday use.</p>
 <img src="/images/pressure-washing-walls.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -173,9 +173,9 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 4 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
+<h2>Exterior Wall Cleaning</h2>
+<p>Exterior walls are constantly exposed to weather, pollution, and organic growth, which can leave your property looking dull over time. Brickwork, render, stone, and cladding in Arksey often develop algae, moss, and grime that ordinary cleaning cannot remove. Pressure washing lifts these deposits, restoring walls to a fresh, clean appearance.</p>
+<p>Our service uses professional equipment and controlled pressure to safely clean all wall types. Each job begins with a careful assessment to determine the correct approach. Beyond enhancing aesthetics, regular wall cleaning protects the structure by removing growth that traps moisture, preventing permanent staining and long-term deterioration. Clean walls create a strong first impression for both residential and commercial properties.</p>
 <img src="/images/pressure-wash-decking.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -186,20 +186,20 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 5 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<P></P>
+<h2>Comprehensive Exterior Pressure Washing</h2>
+<p>Pressure washing is one of the most effective ways to maintain your property’s outdoor areas and prevent long-term damage. Over time, dirt, algae, moss, and grime embed into surfaces, making them difficult to clean with standard methods. Our Arksey pressure washing service removes these deposits thoroughly, improving appearance while protecting surfaces from moisture, staining, and wear.</p>
+<P>We provide pressure cleaning for a wide variety of surfaces, using professional tools and techniques tailored to each area. Every project is individually assessed to ensure the right pressure and method is applied, delivering a safe, consistent clean. Regular pressure washing reduces slip hazards, improves hygiene, and keeps properties looking well-maintained throughout the year. Whether you need a single area cleaned or a full exterior refresh, our service offers a reliable, cost-effective solution for Arksey properties.</P>
 <ul style="text-align: left;">
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
+<li>Driveways and parking areas</li>
+<li>Patios and paved seating areas</li>
+<li>Decking and steps</li>
+<li>Paths and walkways</li>
+<li>Brick, stone, and rendered walls</li>
+<li>Garage doors and cladding</li>
+<li>Gutters, fascias, and soffits</li>
+<li>Conservatory roofs</li>
+<li>Commercial yards, car parks, and access routes</li>
+<li>Fences, gates, and garden walls</li>
 </ul>
 <img src="/images/pressure-washing-algae.webp"
 alt=""
@@ -215,32 +215,32 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions About Pressure Washing in Arksey</h2>
 
 <div>
-<p><strong></strong><br>
-</p>
+<p><strong>What surfaces can be pressure washed?</strong><br>
+Pressure washing works on a wide range of outdoor surfaces, including driveways, patios, decking, walkways, fences, walls, garage doors, gutters, and conservatory roofs. Each surface requires the right pressure and technique to avoid damage while achieving a deep clean.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Is pressure washing safe for all materials?</strong><br>
+Yes. Professionals adjust the pressure and method depending on the material—block paving, concrete, tarmac, natural stone, wood, or render—to prevent damage while delivering effective results.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>How often should exterior surfaces be pressure washed?</strong><br>
+For most properties, once a year is sufficient. High-traffic or shaded areas may need more frequent cleaning to prevent moss, algae, and grime buildup. Regular washing prolongs the lifespan of surfaces.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Can pressure washing remove oil stains and tyre marks from driveways?</strong><br>
+Yes. Professional driveway cleaning lifts stubborn oil stains, tyre marks, and ingrained dirt. Older or heavily stained areas may require additional treatment for the best results.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Does pressure washing help prevent slips and accidents?</strong><br>
+Absolutely. Algae, moss, and grime make surfaces slippery. Removing these hazards improves safety for homeowners, visitors, and staff.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Is pressure washing environmentally friendly?</strong><br>
+Yes. We use water efficiently and only biodegradable cleaning products when necessary. Our methods are safe for plants, pets, and surrounding areas.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>How long does a pressure washing job take?</strong><br>
+The duration depends on the size and type of surface. A standard driveway or patio can often be completed in a few hours, while larger properties may take a full day. We always provide an estimated timeline before starting.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Can pressure washing restore old or stained walls?</strong><br>
+Yes. It removes dirt, algae, moss, and pollution stains from brick, stone, render, and cladding, improving appearance and preventing long-term deterioration.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Do I need to prepare my property before pressure washing?</strong><br>
+Minimal preparation is needed. We recommend moving lightweight furniture, vehicles, and garden ornaments from the area to be cleaned. For walls or delicate surfaces, we may provide extra guidance.</p>
 
 </section>
 
