--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -281,74 +281,74 @@ Minimal preparation is needed. We recommend moving lightweight furniture, vehicl
 "mainEntity": [
 {
 "@type": "Question",
-"name": "",
+"name": "What surfaces can be pressure washed?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Pressure washing works on a wide range of outdoor surfaces, including driveways, patios, decking, walkways, fences, walls, garage doors, gutters, and conservatory roofs. Each surface requires the right pressure and technique to avoid damage while achieving a deep clean."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Is pressure washing safe for all materials?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes. Professionals adjust the pressure and method depending on the material—block paving, concrete, tarmac, natural stone, wood, or render—to prevent damage while delivering effective results."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "How often should exterior surfaces be pressure washed?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "For most properties, once a year is sufficient. High-traffic or shaded areas may need more frequent cleaning to prevent moss, algae, and grime buildup. Regular washing prolongs the lifespan of surfaces."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Can pressure washing remove oil stains and tyre marks from driveways?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes. Professional driveway cleaning lifts stubborn oil stains, tyre marks, and ingrained dirt. Older or heavily stained areas may require additional treatment for the best results."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Does pressure washing help prevent slips and accidents?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Absolutely. Algae, moss, and grime make surfaces slippery. Removing these hazards improves safety for homeowners, visitors, and staff."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Is pressure washing environmentally friendly?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes. We use water efficiently and only biodegradable cleaning products when necessary. Our methods are safe for plants, pets, and surrounding areas."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "How long does a pressure washing job take?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "The duration depends on the size and type of surface. A standard driveway or patio can often be completed in a few hours, while larger properties may take a full day. We always provide an estimated timeline before starting."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Can pressure washing restore old or stained walls?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes. It removes dirt, algae, moss, and pollution stains from brick, stone, render, and cladding, improving appearance and preventing long-term deterioration."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Do I need to prepare my property before pressure washing?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Minimal preparation is needed. We recommend moving lightweight furniture, vehicles, and garden ornaments from the area to be cleaned. For walls or delicate surfaces, we may provide extra guidance."
 }
 }
 ]
