--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -138,7 +138,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>Maintaining the exterior of your property in Arksey can be challenging. Driveways, patios, walls, and other outdoor surfaces are constantly exposed to the elements, traffic, and natural growth. Over time, dirt, algae, moss, lichen, and general stains build up, making surfaces look tired, slippery, and unsafe. Our professional pressure washing services are designed to remove this grime efficiently, restoring your property’s appearance while keeping it safe and well-maintained.</p>
 <p>We use high-quality pressure washing equipment combined with the right techniques for each surface. Before any work begins, we carefully assess the area to ensure the correct pressure and method is used—whether it’s block paving, concrete, tarmac, natural stone, or rendered walls. This approach guarantees a deep, thorough clean without causing damage. For both homes and businesses in Arksey, pressure washing is a practical way to enhance curb appeal, improve safety, and protect outdoor surfaces from long-term wear.</p>
 <img src="/images/pressure-washing-patios.webp"
-alt=""
+alt="Professional pressure washing service in Arksey cleaning outdoor surfaces and removing dirt, algae, and moss from residential property exteriors."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -151,7 +151,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Driveways are one of the first things visitors notice about a property and often the busiest outdoor areas. In Arksey, they frequently collect oil stains, tyre marks, moss, algae, and ingrained dirt. Left untreated, these build-ups make surfaces look neglected and can increase the risk of slips. Professional driveway pressure washing removes these contaminants, leaving your driveway looking fresh, clean, and inviting</p>
 <p>Our service works on block paving, concrete, tarmac, and natural stone. We carefully adjust pressure and techniques to match the material, ensuring effective cleaning without causing damage. Regular driveway maintenance also prevents staining, weed growth, and moisture-related issues. Many property owners choose this service to enhance kerb appeal, maintain property value, and keep entrances safe throughout the year.</p>
 <img src="/images/pressure-washing-driveway.webp"
-alt=""
+alt="Driveway pressure washing in Arksey removing oil stains, tyre marks, moss, and ingrained dirt from block paving."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -164,7 +164,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Patios and decking are made for relaxing and entertaining, but they are also highly susceptible to dirt, algae, moss, and spill stains. In shaded or damp areas, green growth can develop quickly, making surfaces slippery and unattractive. Our pressure washing service restores patios and decking to a clean, safe, and inviting condition, ready for everyday use.</p>
 <p>We clean a variety of surfaces, including concrete, natural stone, porcelain paving, wooden decking, and composite boards. Each surface receives the appropriate pressure and method to avoid damage such as splintering or etching. Regular patio and deck cleaning not only improves appearance but also extends the lifespan of the materials by reducing moisture retention and surface deterioration. Pressure washing is an ideal solution for homeowners in Arksey looking to refresh their garden spaces for entertaining, seasonal enjoyment, or everyday use.</p>
 <img src="/images/pressure-washing-walls.webp"
-alt=""
+alt="Patio and decking pressure washing in Arksey restoring slippery outdoor seating areas to a clean and safe condition."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -177,7 +177,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Exterior walls are constantly exposed to weather, pollution, and organic growth, which can leave your property looking dull over time. Brickwork, render, stone, and cladding in Arksey often develop algae, moss, and grime that ordinary cleaning cannot remove. Pressure washing lifts these deposits, restoring walls to a fresh, clean appearance.</p>
 <p>Our service uses professional equipment and controlled pressure to safely clean all wall types. Each job begins with a careful assessment to determine the correct approach. Beyond enhancing aesthetics, regular wall cleaning protects the structure by removing growth that traps moisture, preventing permanent staining and long-term deterioration. Clean walls create a strong first impression for both residential and commercial properties.</p>
 <img src="/images/pressure-wash-decking.webp"
-alt=""
+alt="Exterior wall pressure cleaning in Arksey removing algae, pollution, and grime from brickwork, render, and stone walls."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -247,8 +247,8 @@ Minimal preparation is needed. We recommend moving lightweight furniture, vehicl
 
 <!-- Close -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
+<h2>Reliable Pressure Washing Services You Can Trust in Arksey</h2>
+<p>Keeping your property clean and well maintained makes a lasting difference to its appearance, safety, and value. With our professional pressure washing services in Arksey, you can be confident that every surface is cleaned thoroughly and treated with care. From driveways and patios to walls and walkways, we deliver reliable results using the right equipment and techniques for each job. Whether you need a one-off clean or regular exterior maintenance, our pressure washing service offers a dependable, cost-effective solution to keep your property looking its best all year round.</p>
 </section>
 
 <!-- ✅ BOTTOM CALL BUTTON -->
