--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -9,7 +9,7 @@
 <title>Pressure Washing Services in Arksey | Driveways, Patios & Walls</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-arksey.html">
-<meta name="Professional pressure washing services in Arksey for driveways, patios, decking, and exterior walls. Safe, reliable cleaning for homes and businesses.">
+<meta name="description" content="Professional pressure washing services in Arksey for driveways, patios, decking, and exterior walls. Safe, reliable cleaning for homes and businesses.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
